// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders correctly 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:focus {
  box-shadow: none;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
}

.c3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: absolute;
  display: none;
  top: 0;
  left: -0.125rem;
}

input:checked ~ .c3 {
  display: block;
}

<Checkbox>
  <Checkbox__CheckboxWrapper>
    <StyledComponent
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Checkbox__CheckboxInput
          type="checkbox"
        >
          <StyledComponent
            forwardedRef={null}
            type="checkbox"
          >
            <input
              className="c1"
              type="checkbox"
            />
          </StyledComponent>
        </Checkbox__CheckboxInput>
        <Checkbox__CheckboxBorder>
          <StyledComponent
            forwardedRef={null}
          >
            <div
              className="c2"
            />
          </StyledComponent>
        </Checkbox__CheckboxBorder>
        <Checkbox__CheckboxIcon
          name="done"
        >
          <StyledComponent
            forwardedRef={null}
            name="done"
          >
            <Base
              className="c3"
              name="done"
              size={24}
              title={null}
            >
              <Icon__CleanSvg
                className="c3"
                fill="currentcolor"
                height={24}
                title="done"
                viewBox="0 0 24 24"
                width={24}
              >
                <StyledComponent
                  className="c3"
                  fill="currentcolor"
                  forwardedRef={null}
                  height={24}
                  title="done"
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <svg
                    className="c3 "
                    fill="currentcolor"
                    height={24}
                    title="done"
                    viewBox="0 0 24 24"
                    width={24}
                  >
                    <path
                      d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
                    />
                  </svg>
                </StyledComponent>
              </Icon__CleanSvg>
            </Base>
          </StyledComponent>
        </Checkbox__CheckboxIcon>
      </div>
    </StyledComponent>
  </Checkbox__CheckboxWrapper>
</Checkbox>
`;

exports[`<Checkbox /> when checked renders correctly 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:focus {
  box-shadow: none;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
}

.c3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: absolute;
  display: none;
  top: 0;
  left: -0.125rem;
}

input:checked ~ .c3 {
  display: block;
}

<Checkbox
  defaultChecked={true}
>
  <Checkbox__CheckboxWrapper>
    <StyledComponent
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Checkbox__CheckboxInput
          defaultChecked={true}
          type="checkbox"
        >
          <StyledComponent
            defaultChecked={true}
            forwardedRef={null}
            type="checkbox"
          >
            <input
              className="c1"
              defaultChecked={true}
              type="checkbox"
            />
          </StyledComponent>
        </Checkbox__CheckboxInput>
        <Checkbox__CheckboxBorder>
          <StyledComponent
            forwardedRef={null}
          >
            <div
              className="c2"
            />
          </StyledComponent>
        </Checkbox__CheckboxBorder>
        <Checkbox__CheckboxIcon
          name="done"
        >
          <StyledComponent
            forwardedRef={null}
            name="done"
          >
            <Base
              className="c3"
              name="done"
              size={24}
              title={null}
            >
              <Icon__CleanSvg
                className="c3"
                fill="currentcolor"
                height={24}
                title="done"
                viewBox="0 0 24 24"
                width={24}
              >
                <StyledComponent
                  className="c3"
                  fill="currentcolor"
                  forwardedRef={null}
                  height={24}
                  title="done"
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <svg
                    className="c3 "
                    fill="currentcolor"
                    height={24}
                    title="done"
                    viewBox="0 0 24 24"
                    width={24}
                  >
                    <path
                      d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
                    />
                  </svg>
                </StyledComponent>
              </Icon__CleanSvg>
            </Base>
          </StyledComponent>
        </Checkbox__CheckboxIcon>
      </div>
    </StyledComponent>
  </Checkbox__CheckboxWrapper>
</Checkbox>
`;

exports[`<Checkbox /> when disabled renders correctly 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:focus {
  box-shadow: none;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
}

.c3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: absolute;
  display: none;
  top: 0;
  left: -0.125rem;
}

input:checked ~ .c3 {
  display: block;
}

<Checkbox
  disabled={true}
>
  <Checkbox__CheckboxWrapper>
    <StyledComponent
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Checkbox__CheckboxInput
          disabled={true}
          type="checkbox"
        >
          <StyledComponent
            disabled={true}
            forwardedRef={null}
            type="checkbox"
          >
            <input
              className="c1"
              disabled={true}
              type="checkbox"
            />
          </StyledComponent>
        </Checkbox__CheckboxInput>
        <Checkbox__CheckboxBorder>
          <StyledComponent
            forwardedRef={null}
          >
            <div
              className="c2"
            />
          </StyledComponent>
        </Checkbox__CheckboxBorder>
        <Checkbox__CheckboxIcon
          name="done"
        >
          <StyledComponent
            forwardedRef={null}
            name="done"
          >
            <Base
              className="c3"
              name="done"
              size={24}
              title={null}
            >
              <Icon__CleanSvg
                className="c3"
                fill="currentcolor"
                height={24}
                title="done"
                viewBox="0 0 24 24"
                width={24}
              >
                <StyledComponent
                  className="c3"
                  fill="currentcolor"
                  forwardedRef={null}
                  height={24}
                  title="done"
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <svg
                    className="c3 "
                    fill="currentcolor"
                    height={24}
                    title="done"
                    viewBox="0 0 24 24"
                    width={24}
                  >
                    <path
                      d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
                    />
                  </svg>
                </StyledComponent>
              </Icon__CleanSvg>
            </Base>
          </StyledComponent>
        </Checkbox__CheckboxIcon>
      </div>
    </StyledComponent>
  </Checkbox__CheckboxWrapper>
</Checkbox>
`;
